# tuipp

./: CMakeLists.txt  LICENSE
.github/workflows/: build.yml  deploy-docs.yml
cmake/: docs.cmake  doxygen.cmake
docs/: index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/get-started/: how-to-create-custom-widgets.md  why.md
docs/html/: Background_8hpp.html  Background_8hpp.js  Background_8hpp__dep__incl.map  Background_8hpp__dep__incl.md5  Background_8hpp_source.html  Border_8hpp.html  Border_8hpp.js  Border_8hpp__dep__incl.map  Border_8hpp__dep__incl.md5  Border_8hpp__incl.map  Border_8hpp__incl.md5  Border_8hpp_source.html  Console_8hpp.html  Console_8hpp.js  Console_8hpp__incl.map  Console_8hpp__incl.md5  Console_8hpp_source.html  Effects_8hpp.html  Effects_8hpp.js  Effects_8hpp__dep__incl.map  Effects_8hpp__dep__incl.md5  Effects_8hpp_source.html  Foreground_8hpp.html  Foreground_8hpp.js  Foreground_8hpp__dep__incl.map  Foreground_8hpp__dep__incl.md5  Foreground_8hpp_source.html  Justification_8hpp.html  Justification_8hpp.js  Justification_8hpp__dep__incl.map  Justification_8hpp__dep__incl.md5  Justification_8hpp_source.html  Rule_8hpp.html  Rule_8hpp.js  Rule_8hpp__incl.map  Rule_8hpp__incl.md5  Rule_8hpp_source.html  Text_8hpp.html  Text_8hpp__incl.map  Text_8hpp__incl.md5  (+148 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  enums_0.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+34 more)
docs/man/man3/: Background.hpp.3  Border.hpp.3  Console.hpp.3  Effects.hpp.3  Foreground.hpp.3  Justification.hpp.3  Rule.hpp.3  _home_giuliano_Programmazione_Cpp_libs_tuipp_include_tuipp_.3  _home_giuliano_Programmazione_Cpp_libs_tuipp_include_tuipp_styles_.3  _home_giuliano_Programmazione_Cpp_libs_tuipp_include_tuipp_widgets_.3  _home_giuliano_Programmazione_Cpp_libs_tuipp_include_tuipp_widgets_styles_.3  colors.hpp.3  console_info.hpp.3  noname  print.hpp.3  tuipp.3  tuipp_Console.3  tuipp_colors.3  tuipp_console_info.3  tuipp_console_info_TerminalSize.3  tuipp_styles.3  tuipp_styles_border.3  tuipp_styles_border_Ascii.3  tuipp_styles_border_Double.3  tuipp_styles_border_Heavy.3  tuipp_styles_border_None.3  tuipp_styles_border_Rounded.3  tuipp_styles_border_Square.3  tuipp_widgets.3  tuipp_widgets_Rule.3  tuipp_widgets_Text.3  tuipp_widgets_styles.3  tuipp_widgets_styles_border.3  tuipp_widgets_styles_border_Ascii.3  tuipp_widgets_styles_border_Border.3  tuipp_widgets_styles_border_Double.3  tuipp_widgets_styles_border_Heavy.3  tuipp_widgets_styles_border_None.3  tuipp_widgets_styles_border_Rounded.3  tuipp_widgets_styles_border_Square.3
docs/widgets/: text.md
include/tuipp/: CMakeLists.txt  Console.hpp  colors.hpp  console_info.hpp  print.hpp
include/tuipp/styles/: Background.hpp  Border.hpp  Effects.hpp  Foreground.hpp  Justification.hpp
include/tuipp/widgets/: IRenderable.hpp  MarkupText.hpp  Panel.hpp  Rule.hpp  Text.hpp
include/tuipp/widgets/styles/: Background.hpp  Effects.hpp  Foreground.hpp
scripts/: build.sh
src/tuipp/: Ast.hpp  CMakeLists.txt  Console.cpp  console_info.cpp  handle_styles.hpp  parse_string.hpp  parse_string_to_ast.hpp
src/tuipp/borders/: Border.cpp  BorderParts.hpp
src/tuipp/string_parser/: handle_styles.hpp  parse_string.hpp
src/tuipp/widgets/: Panel.cpp  Rule.cpp  Style.hpp  Text.cpp  apply_styles.hpp
src/tuipp/widgets/markup_text/: MarkupText.cpp
src/tuipp/widgets/markup_text/parser/: get_text_lenght.hpp  handle_styles.hpp  parse_string.hpp
test/: main.cpp
